# Chatbot-Prueba

chatbot-lead-qualifier/: .env.example  .gitignore  EJEMPLOS_CONVERSACIONES.md  IMPLEMENTACION_KB.md  LICENSE  MANIFEST.in  Makefile  PROYECTO_COMPLETADO.txt  QUICK_START.md  README.md  README_KB.md  RESUMEN_EJECUTIVO.md  VERIFICACION_WHATSAPP.md  WHATSAPP_DIRECTO.md  WHATSAPP_INTEGRATION.js  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  start.bat  start.sh  test_kb_integration.py
chatbot-lead-qualifier/app/: config.py  main.py
chatbot-lead-qualifier/app/api/: routes.py  routes_refactored.py
chatbot-lead-qualifier/app/chatbot/: SYSTEM_PROMPT.md  conversation_manager.py  flow_controller.py  knowledge_base.json  response_generator.py
chatbot-lead-qualifier/app/database/migrations/: init_db.sql
chatbot-lead-qualifier/app/integrations/: email_notifier.py  whatsapp.py  wordpress.py
chatbot-lead-qualifier/app/lead_qualifier/: classifier.py  criteria.py  rules.py  scorer.py
chatbot-lead-qualifier/app/models/: conversation.py  lead.py  user_session.py
chatbot-lead-qualifier/app/spark/: analytics.py  batch_processor.py
chatbot-lead-qualifier/app/utils/: logger.py
chatbot-lead-qualifier/deployment/apache/: chatbot.conf  chatbot.wsgi
chatbot-lead-qualifier/deployment/nginx/: chatbot.conf
chatbot-lead-qualifier/deployment/systemd/: chatbot.service
chatbot-lead-qualifier/docs/: API.md  FLOW.md  INTERACCIONES.md  README.md  SETUP.md
chatbot-lead-qualifier/frontend/: index.html
chatbot-lead-qualifier/frontend/css/: chatbot-styles.css
chatbot-lead-qualifier/frontend/js/: api-client.js  chatbot-widget.js
chatbot-lead-qualifier/tests/: test_chatbot.py  test_integrations.py  test_lead_qualifier.py
chatbot-lead-qualifier/wordpress-plugin/: README.md  chatbot-plugin.php
chatbot-lead-qualifier/wordpress-plugin/assets/css/: chatbot.css
chatbot-lead-qualifier/wordpress-plugin/assets/js/: chatbot.js
chatbot-lead-qualifier/wordpress-plugin/includes/: api-integration.php
chatbot-lead-qualifier/wordpress-plugin/templates/: admin-settings.php  chatbot-inline.php  chatbot-widget.php
